custom entity list

--- a/TransferUI/src/app/modules/resident/resident-list/resident-list.component.html
+++ b/TransferUI/src/app/modules/resident/resident-list/resident-list.component.html
@@ -1,75 +1,3 @@
-<div class="flex flex-col justify-center items-center">
-  <mat-progress-bar mode="determinate" [value]="deleteProgress"></mat-progress-bar>
-
-  <div class="w-[90%] relative top-5 ">
-    <div class=" flex justify-between mb-2">
-      <p class="font-medium text-xl">Residents information:</p>
-      <span matRipple [matRippleCentered]="true"
-        class="p-2 rounded-[50%] flex justify-center bg-slate-300 cursor-pointer">
-        <a class="flex justify-center items-center" routerLink="/resident-create">
-          <mat-icon matTooltip="Create item" aria-hidden="false" aria-label="Create item" fontIcon="add">
-          </mat-icon>
-        </a>
-      </span>
-    </div>
-    <mat-table [dataSource]="residents"
-      class="mat-elevation-z8 max-h-[570px] overflow-auto rounded-md mat-table-container">
-      <!-- Id Column -->
-      <ng-container matColumnDef="id">
-        <mat-header-cell *matHeaderCellDef> Id </mat-header-cell>
-        <mat-cell *matCellDef="let element"> {{element.id}} </mat-cell>
-      </ng-container>
-
-      <!-- First Name Column -->
-      <ng-container matColumnDef="first_name">
-        <mat-header-cell *matHeaderCellDef> First Name </mat-header-cell>
-        <mat-cell *matCellDef="let element"> {{element.firstName}} </mat-cell>
-      </ng-container>
-
-      <!-- Last Name Column -->
-      <ng-container matColumnDef="last_name">
-        <mat-header-cell *matHeaderCellDef> Last Name </mat-header-cell>
-        <mat-cell *matCellDef="let element"> {{element.lastName}} </mat-cell>
-      </ng-container>
-
-      <!-- DOB Column -->
-      <ng-container matColumnDef="dob">
-        <mat-header-cell *matHeaderCellDef> DOB </mat-header-cell>
-        <mat-cell *matCellDef="let element"> {{element.doB | customDate}} </mat-cell>
-      </ng-container>
-
-      <!-- Facility Column -->
-      <ng-container matColumnDef="facility">
-        <mat-header-cell *matHeaderCellDef> Facility </mat-header-cell>
-        <mat-cell *matCellDef="let element"> {{element.facility && element.facility.name}} </mat-cell>
-      </ng-container>
-
-      <!-- Edit Column -->
-      <ng-container matColumnDef="edit">
-        <mat-header-cell *matHeaderCellDef> Edit </mat-header-cell>
-        <mat-cell *matCellDef="let element">
-          <span matRipple [matRippleCentered]="true" class="p-2 rounded-[50%]">
-            <a title="Resident edit" class=" flex justify-center items-center"
-              [routerLink]="['/resident-edit', element.id]">
-              <mat-icon matTooltip="Edit item" aria-hidden="false" aria-label="Edit item" fontIcon="edit"></mat-icon>
-            </a>
-          </span>
-        </mat-cell>
-      </ng-container>
-
-      <!-- Delete Column -->
-      <ng-container matColumnDef="delete">
-        <mat-header-cell *matHeaderCellDef>Delete </mat-header-cell>
-        <mat-cell *matCellDef="let element">
-          <span matRipple [matRippleCentered]="true" class="p-2 rounded-[50%] flex justify-center">
-            <mat-icon matTooltip="Delete item" aria-hidden="false" aria-label="Delete item" fontIcon="delete"
-              (click)="deleteResident(element.id)"></mat-icon>
-          </span>
-        </mat-cell>
-      </ng-container>
-
-      <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-      <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-    </mat-table>
-  </div>
-</div>
+<app-entity-list [entities]="residents" [displayedColumns]="displayedColumns" [entityName]="'Residents'"
+  [entityCreateRoute]="'/resident-create'" [entityEditRoute]="'/resident-edit'" [deleteProgress]="deleteProgress"
+  (deleteEntityFunction)="deleteResident($event)"></app-entity-list>
