optimize code list and form

--- a/TransferUI/src/app/modules/facility/facility-edit/facility-edit.component.html
+++ b/TransferUI/src/app/modules/facility/facility-edit/facility-edit.component.html
@@ -1,30 +1,2 @@
-<div class="flex flex-col justify-center items-center">
-  <mat-progress-bar mode="determinate" [value]="submitProgress"></mat-progress-bar>
-
-  <div class="w-[60%] relative top-[60px] bg-green-100 p-7 rounded-xl">
-    <p class="font-medium text-xl w-full text-center">EDIT FACILITY</p>
-    <form #angForm="ngForm" (ngSubmit)="submitForm(angForm)">
-      <mat-form-field class="w-full">
-        <mat-label>Name</mat-label>
-        <input matInput type="text" name="name" [(ngModel)]="facility.name" #name="ngModel" required />
-        <mat-error *ngIf="name.invalid && (name.dirty || name.touched) ">
-          Name is required
-        </mat-error>
-      </mat-form-field>
-
-      <mat-form-field class="w-full">
-        <mat-label>Address</mat-label>
-        <input matInput type="text" name="address" [(ngModel)]="facility.address" #address="ngModel" required />
-        <mat-error *ngIf="address.invalid && (address.dirty || address.touched)">
-          Address is required
-        </mat-error>
-      </mat-form-field>
-
-      <div class="mt-4 text-center">
-        <button mat-raised-button color="primary" type="submit" [disabled]="angForm.invalid">
-          EDIT FACILITY
-        </button>
-      </div>
-    </form>
-  </div>
-</div>
+<app-facility-form [title]="'EDIT FACILITY'" [formData]="facility" [submitButtonLabel]="'EDIT FACILITY'"
+  (formSubmitted)="submitForm($event)" [submitProgress]="submitProgress"></app-facility-form>
