--- a/TransferUI/src/app/modules/facility/facility-create/facility-create.component.html
+++ b/TransferUI/src/app/modules/facility/facility-create/facility-create.component.html
@@ -1,2 +1,7 @@
-<app-facility-form [title]="'CREATE FACILITY'" [formData]="facilityDTO" [submitButtonLabel]="'CREATE FACILITY'"
-  (formSubmitted)="submitForm($event)" [submitProgress]="submitProgress"></app-facility-form>
+<app-facility-form 
+  [title]="'CREATE FACILITY'" 
+  [formData]="facilityDTO" 
+  [submitButtonLabel]="'CREATE FACILITY'"
+  (formSubmitted)="submitForm($event)" 
+  [submitProgress]="submitProgress">
+</app-facility-form>
