--- a/TransferUI/src/app/modules/facility/facility-list/facility-list.component.html
+++ b/TransferUI/src/app/modules/facility/facility-list/facility-list.component.html
@@ -1,3 +1,9 @@
-<app-entity-list [entities]="facilities" [displayedColumns]="displayedColumns" [entityName]="'Facilities'"
-  [entityCreateRoute]="'/facility-create'" [entityEditRoute]="'/facility-edit'" [deleteProgress]="deleteProgress"
-  (deleteEntityFunction)="deleteFacilities($event)"></app-entity-list>
+<app-entity-list 
+  [entities]="facilities" 
+  [displayedColumns]="displayedColumns" 
+  [entityName]="'Facilities'"
+  [entityCreateRoute]="'/facility-create'" 
+  [entityEditRoute]="'/facility-edit'" 
+  [deleteProgress]="deleteProgress"
+  (deleteEntityFunction)="deleteFacilities($event)">
+</app-entity-list>
