--- a/TransferUI/src/app/modules/progress-note/progress-note-create/progress-note-create.component.html
+++ b/TransferUI/src/app/modules/progress-note/progress-note-create/progress-note-create.component.html
@@ -1,4 +1,10 @@
-<app-progress-note-form [title]="'CREATE PROGRESSNOTE'" [submitButtonLabel]="'CREATE PROGRESSNOTE'"
-  [submitProgress]="submitProgress" [progressNote]="progressNote" [maxDate]="maxDate"
-  [selectedResidentId]="selectedResidentId" [residents]="residents"
-  (formSubmitted)="submitForm($event[0],$event[1])"></app-progress-note-form>
+<app-progress-note-form 
+  [title]="'CREATE PROGRESSNOTE'" 
+  [submitButtonLabel]="'CREATE PROGRESSNOTE'"
+  [submitProgress]="submitProgress" 
+  [progressNote]="progressNote" 
+  [maxDate]="maxDate"
+  [selectedResidentId]="selectedResidentId" 
+  [residents]="residents"
+  (formSubmitted)="submitForm($event[0],$event[1])">
+</app-progress-note-form>
