--- a/TransferUI/src/app/modules/progress-note/progress-note-list/progress-note-list.component.html
+++ b/TransferUI/src/app/modules/progress-note/progress-note-list/progress-note-list.component.html
@@ -1,3 +1,9 @@
-<app-entity-list [entities]="progressNotes" [displayedColumns]="displayedColumns" [entityName]="'ProgressNotes'"
-  [entityCreateRoute]="'/progress-note-create'" [entityEditRoute]="'/progress-note-edit'"
-  [deleteProgress]="deleteProgress" (deleteEntityFunction)="deleteProgressNote($event)"></app-entity-list>
+<app-entity-list 
+  [entities]="progressNotes" 
+  [displayedColumns]="displayedColumns" 
+  [entityName]="'ProgressNotes'"
+  [entityCreateRoute]="'/progress-note-create'" 
+  [entityEditRoute]="'/progress-note-edit'"
+  [deleteProgress]="deleteProgress" 
+  (deleteEntityFunction)="deleteProgressNote($event)">
+</app-entity-list>
