--- a/TransferUI/src/app/modules/resident/resident-list/resident-list.component.html
+++ b/TransferUI/src/app/modules/resident/resident-list/resident-list.component.html
@@ -1,3 +1,9 @@
-<app-entity-list [entities]="residents" [displayedColumns]="displayedColumns" [entityName]="'Residents'"
-  [entityCreateRoute]="'/resident-create'" [entityEditRoute]="'/resident-edit'" [deleteProgress]="deleteProgress"
-  (deleteEntityFunction)="deleteResident($event)"></app-entity-list>
+<app-entity-list 
+  [entities]="residents" 
+  [displayedColumns]="displayedColumns" 
+  [entityName]="'Residents'"
+  [entityCreateRoute]="'/resident-create'" 
+  [entityEditRoute]="'/resident-edit'" 
+  [deleteProgress]="deleteProgress"
+  (deleteEntityFunction)="deleteResident($event)">
+</app-entity-list>
