--- a/TransferUI/src/app/shared/components/resident-form/resident-form.component.html
+++ b/TransferUI/src/app/shared/components/resident-form/resident-form.component.html
@@ -7,7 +7,8 @@
 
       <mat-form-field class="w-full">
         <mat-label>First name</mat-label>
-        <input matInput type="text" name="first_name" [(ngModel)]="resident.firstName" #first_name="ngModel" required />
+        <input matInput type="text" name="first_name" 
+          [(ngModel)]="resident.firstName" #first_name="ngModel" required />
         <mat-error *ngIf="first_name.invalid && (first_name.dirty || first_name.touched) ">
           First name is required
         </mat-error>
@@ -15,7 +16,8 @@
 
       <mat-form-field class="w-full">
         <mat-label>Last name</mat-label>
-        <input matInput type="text" name="last_name" [(ngModel)]="resident.lastName" #last_name="ngModel" required />
+        <input matInput type="text" name="last_name" 
+          [(ngModel)]="resident.lastName" #last_name="ngModel" required />
         <mat-error *ngIf="last_name.invalid && (last_name.dirty || last_name.touched) ">
           Last name is required
         </mat-error>
@@ -24,8 +26,10 @@
       <div class="flex justify-between">
         <mat-form-field class="w-[45%]">
           <mat-label>Choose a DOB</mat-label>
-          <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="picker" [(ngModel)]="resident.doB"
-            #dob="ngModel" (dateChange)="onDateChange($event)" [ngModelOptions]="{standalone: true}" required>
+          <input matInput [min]="minDate" [max]="maxDate" 
+            [matDatepicker]="picker" [(ngModel)]="resident.doB"
+            #dob="ngModel" (dateChange)="onDateChange($event)" 
+            [ngModelOptions]="{standalone: true}" required>
           <mat-hint>MM/DD/YYYY</mat-hint>
           <mat-error *ngIf="dob.invalid && (dob.dirty || dob.touched) ">
             DOB is required (MM/DD/YYYY)
@@ -37,13 +41,17 @@
         <mat-form-field class="w-[45%]">
           <mat-label>Select a facility</mat-label>
           <mat-select [(value)]="selectedFacilityId">
-            <mat-option *ngFor="let facility of facilities" [value]="facility.id">{{facility.name}}</mat-option>
+            <mat-option *ngFor="let facility of facilities" 
+              [value]="facility.id">
+              {{facility.name}}
+            </mat-option>
           </mat-select>
         </mat-form-field>
       </div>
 
       <div class="mt-4 text-center">
-        <button mat-raised-button color="primary" type="submit" [disabled]="angForm.invalid || dob.invalid">
+        <button mat-raised-button color="primary" type="submit" 
+          [disabled]="angForm.invalid || dob.invalid">
           {{ submitButtonLabel }}
         </button>
       </div>
