--- a/TransferUI/src/app/modules/facility/facility-edit/facility-edit.component.html
+++ b/TransferUI/src/app/modules/facility/facility-edit/facility-edit.component.html
@@ -1,2 +1,7 @@
-<app-facility-form [title]="'EDIT FACILITY'" [formData]="facility" [submitButtonLabel]="'EDIT FACILITY'"
-  (formSubmitted)="submitForm($event)" [submitProgress]="submitProgress"></app-facility-form>
+<app-facility-form 
+  [title]="'EDIT FACILITY'" 
+  [formData]="facility" 
+  [submitButtonLabel]="'EDIT FACILITY'"
+  (formSubmitted)="submitForm($event)" 
+  [submitProgress]="submitProgress">
+</app-facility-form>
