--- a/TransferUI/src/app/shared/components/footer/footer.component.html
+++ b/TransferUI/src/app/shared/components/footer/footer.component.html
@@ -1,4 +1,5 @@
 <footer class="bg-gray-200 p-4 text-center">
-  <img src="../../../../assets/PTN-Global_logo.png" alt="Company Logo" class="h-auto w-auto mx-auto">
+  <img src="../../../../assets/PTN-Global_logo.png" 
+    alt="Company Logo" class="h-auto w-auto mx-auto">
   <p class="mt-2">&copy; 2023 PTN Global Corp Company</p>
 </footer>
