--- a/TransferUI/src/app/shared/components/progress-note-form/progress-note-form.component.html
+++ b/TransferUI/src/app/shared/components/progress-note-form/progress-note-form.component.html
@@ -7,7 +7,8 @@
 
       <mat-form-field class="w-full">
         <mat-label>Content</mat-label>
-        <input matInput type="text" name="content" [(ngModel)]="progressNote.content" #content="ngModel" required />
+        <input matInput type="text" name="content" 
+          [(ngModel)]="progressNote.content" #content="ngModel" required />
         <mat-error *ngIf="content.invalid && (content.dirty || content.touched) ">
           Content is required
         </mat-error>
@@ -15,7 +16,8 @@
 
       <mat-form-field class="w-full">
         <mat-label>Type</mat-label>
-        <input matInput type="text" name="type" [(ngModel)]="progressNote.type" #type="ngModel" required />
+        <input matInput type="text" name="type" 
+          [(ngModel)]="progressNote.type" #type="ngModel" required />
         <mat-error *ngIf="type.invalid && (type.dirty || type.touched) ">
           Type is required
         </mat-error>
@@ -24,8 +26,10 @@
       <div class="flex justify-between">
         <mat-form-field class="w-[45%]">
           <mat-label>Choose a create date</mat-label>
-          <input matInput [max]="maxDate" [matDatepicker]="picker" [(ngModel)]="progressNote.createdDate"
-            #createdDate="ngModel" (dateChange)="onDateChange($event)" [ngModelOptions]="{standalone: true}" required>
+          <input matInput [max]="maxDate" [matDatepicker]="picker" 
+            [(ngModel)]="progressNote.createdDate"
+            #createdDate="ngModel" (dateChange)="onDateChange($event)" 
+            [ngModelOptions]="{standalone: true}" required>
           <mat-hint>MM/DD/YYYY</mat-hint>
           <mat-error *ngIf="createdDate.invalid && (createdDate.dirty || createdDate.touched) ">
             Create date is required (MM/DD/YYYY)
@@ -37,15 +41,17 @@
         <mat-form-field class="w-[45%]">
           <mat-label>Select an resident</mat-label>
           <mat-select [(value)]="selectedResidentId">
-            <mat-option *ngFor="let resident of residents" [value]="resident.id">{{resident.firstName +" "+
-              resident.lastName}}</mat-option>
+            <mat-option *ngFor="let resident of residents" 
+              [value]="resident.id">
+              {{resident.firstName +" "+ resident.lastName}}
+            </mat-option>
           </mat-select>
         </mat-form-field>
       </div>
 
-
       <div class="mt-4 text-center">
-        <button mat-raised-button color="primary" type="submit" [disabled]="angForm.invalid || createdDate.invalid">
+        <button mat-raised-button color="primary" type="submit" 
+          [disabled]="angForm.invalid || createdDate.invalid">
           {{ submitButtonLabel }}
         </button>
       </div>
